force-app/main/default/objects/LGL_Service_Offering__c/LGL_Service_Offering__c.object-meta.xml
<CustomObject>
    <description>Represents an offering of a certain service in an specific location in a village</description>
    <label>Service Offering</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Service Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Offerings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>