force-app/main/default/objects/LGL_Service_Offering__c/fields/LGL_Manually_Lock__c.field-meta.xml
<CustomField>
    <fullName>LGL_Manually_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check that allows a particular offering to be locked during the day. For example, and because for the Left Luggage service is hard to determine (based on numbers) whether if the service is available or full, this check allows the Hospitality team to track the availability of the Service. This checkbox is updated from the Luggage &amp; Loans App</description>
    <label>Manually Lock Offering</label>
    <type>Checkbox</type>
</CustomField>