force-app/main/default/objects/LGL_Service_Offering__c/fields/LGL_Quantity__c.field-meta.xml
<CustomField>
    <fullName>LGL_Quantity__c</fullName>
    <description>Number of services present in the location at the beggining of the day</description>
    <label>Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>