force-app/main/default/objects/LGL_Service_Offering__c/fields/LGL_Service_Offering_Location__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Offering_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The actual location where the service is being offered</description>
    <label>Service Offering Location</label>
    <referenceTo>HFS_Collection_Point__c</referenceTo>
    <relationshipLabel>Service Offerings</relationshipLabel>
    <relationshipName>Service_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>