force-app/main/default/objects/LGL_Service_Offering__c/fields/LGL_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Service that the record is offering</description>
    <label>Service Type</label>
    <referenceTo>LGL_Service_Type__c</referenceTo>
    <relationshipLabel>Service Offerings</relationshipLabel>
    <relationshipName>Service_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>