force-app/main/default/objects/LGL_Service_Offering__c/fields/LGL_Village__c.field-meta.xml
<CustomField>
    <fullName>LGL_Village__c</fullName>
    <description>Field used from Service Offering sharing rules keep segregation of records based on village</description>
    <label>Village</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Village</valueSetName>
    </valueSet>
</CustomField>